--- a/app/views/properties/_form.html.erb
+++ b/app/views/properties/_form.html.erb
@@ -55,6 +55,13 @@
 				</div>
 			</p>
 
+			<p>
+				<div class="form-group">
+					<%= form.label :accountNumber, class: "control-label" %>
+					<%= form.number_field :accountNumber, class: "form-control" %>
+				</div>
+			</p>
+
 
 			<p>
 				<div class="form-group">
