--- a/app/views/properties/index.html.erb
+++ b/app/views/properties/index.html.erb
@@ -9,7 +9,7 @@
     <th>Name</th>
     <th>Place</th>
     
-    <!-- <th>Price</th> -->
+    <th>Photo</th>
     <th>Price Point (₦)</th>
     <th colspan = "3"></th>
   </tr>
@@ -19,7 +19,7 @@
     
       <td><%= property.name %></td>
       <td><%= property.place %></td>
-      
+      <td><%= image_tag property.visual %></td>
       <td><%= property.spend = property.price * 10/7 %></td>
       <td><%= link_to 'Show', property_path(property) %></td>
         <td><%= link_to "Procure", "http://www.paystack.com/realest", :target => "_blank" %></td>  
