--- a/app/views/properties/new.html.erb
+++ b/app/views/properties/new.html.erb
@@ -1,3 +1,7 @@
 <h2>Enter detail</h2>
 <%= render 'form' %>
-<%= link_to 'Back', properties_path %>
+<div class="row">
+	<div class="col-md-6 col-md-offset-3">
+		<%= link_to 'Back', properties_path %>
+	</div>
+</div>
