--- a/app/views/properties/_form.html.erb
+++ b/app/views/properties/_form.html.erb
@@ -50,7 +50,7 @@
 
 			<p>
 				<div class="form-group">
-					<%= form.label :Views, class: "control-label" %>
+					<%= form.label :MultipleViews, class: "control-label" %>
 					<%= form.file_field :piece, multiple: true, class: "form-control" %>	
 				</div>
 			</p>
