--- a/app/views/properties/show.html.erb
+++ b/app/views/properties/show.html.erb
@@ -1,7 +1,7 @@
 <p><div class="row">
 
-  <div class="col-md-4">
-    <strong>House View -</strong>
+  <div class="col-md-3 col-md-offset-1">
+    <strong>Primary House View -</strong>
   </div>
    <div class="col-md-8">
      <%= image_tag @property.visual%>
@@ -10,7 +10,7 @@
 </p>
 
 <p><div class="row">
-   <div class="col-md-4">
+   <div class="col-md-3 col-md-offset-1">
      <strong>Name -</strong>
    </div>
    <div class="col-md-8">
@@ -20,7 +20,7 @@
 </p>
 <p>
   <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-3 col-md-offset-1">
       <strong>Place -<strong>
     </div>
       <div class="col-md-8">
@@ -30,8 +30,8 @@
 </p>
 <p>
   <div class="row">
-    <div class="col-md-4">
-      <strong>MultiView -<strong>
+    <div class="col-md-3 col-md-offset-1">
+      <strong>Multiple Views -<strong>
     </div>
      <div class="col-md-8">
        <% @property.piece.each do |u| %>
@@ -42,7 +42,7 @@
 </p>
 <p>
   <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-3 col-md-offset-1">
       <strong>Price -<strong>
     </div>
     <div class="col-md-8">
