--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Real Estate Center</h1>
+<h1 align="Center">Real Estate Center</h1>
 
 <br>
 <%= link_to "Provide | Procure Property", controller: 'properties' %>
