--- a/app/views/properties/index.html.erb
+++ b/app/views/properties/index.html.erb
@@ -1,9 +1,9 @@
-<h1> Property Listing  </h1>
+<h1> Properties' Listing  </h1>
 <p class="navbar-text pull-left">
 <%= link_to 'Home', welcome_index_path %>  <br>
 <%= link_to 'Add Property', new_property_path %>
-
 </p>
+
 <table class="table table-hover">
   <tr>
     <th>Name</th>
@@ -23,7 +23,7 @@
       <td><%= property.spend = property.price * 10/7 %></td>
       <td><%= link_to 'Show', property_path(property) %></td>
         <td><%= link_to "Procure", "http://www.paystack.com/realest", :target => "_blank" %></td>  
-      <!-- <td><%= link_to 'Procure', new_cheese_path %></td> -->
+      
       <% if property.person == current_person %>
         
       	<td><%= link_to 'Edit', edit_property_path(property) %></td>
