--- a/app/views/properties/index.html.erb
+++ b/app/views/properties/index.html.erb
@@ -1,4 +1,4 @@
-<h1> Properties' Listing  </h1>
+<h1> Properties Listing  </h1>
 <p class="navbar-text pull-left">
 <%= link_to 'Home', welcome_index_path %>  <br>
 <%= link_to 'Add Property', new_property_path %>
