--- a/app/views/properties/show.html.erb
+++ b/app/views/properties/show.html.erb
@@ -31,6 +31,17 @@
 <p>
   <div class="row">
     <div class="col-md-3 col-md-offset-1">
+      <strong>Description-<strong>
+    </div>
+      <div class="col-md-8">
+        <%= @property.Description %>
+      </div>
+  </div>
+</p>
+
+<p>
+  <div class="row">
+    <div class="col-md-3 col-md-offset-1">
       <strong>Multiple Views -<strong>
     </div>
      <div class="col-md-8">
