--- a/app/views/properties/index.html.erb
+++ b/app/views/properties/index.html.erb
@@ -8,7 +8,7 @@
   <tr>
     <th>Name</th>
     <th>Place</th>
-    
+    <th>Description</th>
     <th>Photo</th>
     <th>Price Point (₦)</th>
     <th colspan = "3"></th>
@@ -19,8 +19,10 @@
     
       <td><%= property.name %></td>
       <td><%= property.place %></td>
+      <td><%= property.Description %></td>
       <td><%= image_tag property.visual %></td>
-      <td><%= property.spend = property.price * 10/7 %></td>
+      <%= property.spend = property.price * 10/7 %>
+      <td><%= property.spend.round(2)%></td>
       <td><%= link_to 'Show', property_path(property) %></td>
         <td><%= link_to "Procure", "http://www.paystack.com/realest", :target => "_blank" %></td>  
       
