--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
       <h4>
         <p class="navbar-text pull-right">
         <% if person_signed_in? %>
-          <strong><%= current_person.email %></strong>.
+          <strong><%= current_person.userN %></strong>.
           <%= link_to 'Edit profile', edit_person_registration_path, :class => 'navbar-link' %> |
           <%= link_to "Logout", destroy_person_session_path, method: :delete, :class => 'navbar-link'  %>
         <% else %>
