--- a/app/views/properties/show.html.erb
+++ b/app/views/properties/show.html.erb
@@ -57,6 +57,7 @@
       <strong>Price -<strong>
     </div>
     <div class="col-md-8">
+      <%= @property.currency %>
       <%= @property.price %>
     </div>
   </div>
