--- a/app/views/properties/index.html.erb
+++ b/app/views/properties/index.html.erb
@@ -10,7 +10,7 @@
     <th>Place</th>
     <th>Description</th>
     <th>Photo</th>
-    <th>Price Point (₦)</th>
+    <th>Price Point</th>
     <th colspan = "3"></th>
   </tr>
 
@@ -22,7 +22,7 @@
       <td><%= property.Description %></td>
       <td><%= image_tag property.visual %></td>
       <%= property.spend = property.price * 10/7 %>
-      <td><%= property.spend.round(2)%></td>
+      <td><%= property.currency %><%= property.spend.round(2)%></td>
       <td><%= link_to 'Show', property_path(property) %></td>
         <td><%= link_to "Procure", "http://www.paystack.com/realest", :target => "_blank" %></td>  
       
