--- a/app/views/properties/show.html.erb
+++ b/app/views/properties/show.html.erb
@@ -31,6 +31,16 @@
 <p>
   <div class="row">
     <div class="col-md-3 col-md-offset-1">
+      <strong>Purchase Order -</strong>
+    </div>
+    <div class="col-md-8">
+      <%= @property.purchaseOrder %>
+    </div>
+  </div>
+</p>
+<p>
+  <div class="row">
+    <div class="col-md-3 col-md-offset-1">
       <strong>Description-<strong>
     </div>
       <div class="col-md-8">
