--- a/app/views/properties/_form.html.erb
+++ b/app/views/properties/_form.html.erb
@@ -90,6 +90,13 @@
 				</div>
 			</p>
 
+			<p>
+				<div class="form-group">
+					<%= form.label :contactNumber, class: "control-label" %>
+					<%= form.number_field :contactNumber, class: "form-control" %>
+				</div>
+			</p>
+
 
 			<p>
 				<div class="form-group">
