--- a/app/views/properties/show.html.erb
+++ b/app/views/properties/show.html.erb
@@ -68,7 +68,7 @@
     </div>
     <div class="col-md-8">
       <%= @property.currency %>
-      <%= @property.price %>
+      <%= @property.spend %>
     </div>
   </div>
 </p>
