--- a/app/views/properties/index.html.erb
+++ b/app/views/properties/index.html.erb
@@ -23,7 +23,7 @@
       <td><%= property.purchaseOrder %></td>
       <td><%= property.Description %></td>
       <td><%= image_tag property.visual %></td>
-      <td><%= property.currency %><%= property.s.round(2)%></td>
+      <td><%= property.currency %><%= property.price%></td>
       <td><%= link_to 'Show', property_path(property) %></td>
         <td><%= link_to "Procure", "https://www.paystack.com/pay/realest", :target => "_blank" %></td>  
       
