--- a/app/views/properties/index.html.erb
+++ b/app/views/properties/index.html.erb
@@ -1,8 +1,16 @@
 <h1> Properties Listing  </h1>
-<p class="navbar-text pull-left">
-<%= link_to 'Home', welcome_index_path %>  <br>
-<%= link_to 'Add Property', new_property_path %>
-</p>
+<div class="container-fluid" align="center">
+  <div class="row">
+    <div class="col-md-6 offset-md-3">
+      <nav class="navbar navbar-dark bg-dark">
+        <%= link_to 'Home', welcome_index_path %>  <br>
+        <%= link_to 'Add Property', new_property_path %>
+      </nav> 
+    </div>
+  </div>
+  
+</div>
+
 
 <table class="table table-hover">
   <tr>
