--- a/app/views/properties/index.html.erb
+++ b/app/views/properties/index.html.erb
@@ -23,7 +23,7 @@
     <th colspan = "3"></th>
   </tr>
 
-  <%= @properties.each do |property| %>
+  <% @properties.each do |property| %>
     <tr>
     
       <td><%= property.name %></td>
